Fix margins on small screens. https://github.com/Beth-Mardutho/hugoye-data/issues/242

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -996,6 +996,8 @@ div.toggle-buttons .toggle-label {font-size: 1em; font-weight:600}
 
 /* Small screens */
 @media screen and (max-width: 768px) {
+    .section, .container, .white {margin:0; padding:0;}
+    .interior-content {margin:.25em; padding:.25em;}
     .navbar-collapse, .dropdown-menu {float:none; width:100% !important;}
     .navbar-nav li {width:100% !important; float:none;}
     .mobile-submenu {
@@ -1004,6 +1006,7 @@ div.toggle-buttons .toggle-label {font-size: 1em; font-weight:600}
         margin-left:3em;
         }
     .caret {float:left; margin-left:.5em; margin-top:.5em;}    
+    .interior-content {margin:.25em; padding:.25em;}
     .hugoye-banner {
         height:100px !important;
         }
@@ -1011,6 +1014,8 @@ div.toggle-buttons .toggle-label {font-size: 1em; font-weight:600}
 
 /* Medium screens */
 @media screen and (max-width: 992px) {   
+    .section, .container, .white {margin:0; padding:0;}
+    .interior-content {margin:.25em; padding:.25em;}
 .hugoye-banner {
     height:125px !important;
     }
